# dealradar

./: .env.example  .gitattributes  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml
apps/web/: drizzle.config.ts  eslint.config.mjs  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/about/: page.tsx
apps/web/app/blog/: page.tsx
apps/web/app/blog/best-time-to-book-flights/: page.tsx
apps/web/app/blog/how-to-find-cheap-flights-from-singapore/: page.tsx
apps/web/app/deals/: page.tsx
apps/web/app/disclosure/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/app/search/: page.tsx
apps/web/app/terms/: page.tsx
apps/web/components/: doc-shell.tsx  fare-chart.tsx  flight-search-form.tsx  site-footer.tsx
apps/web/drizzle/: 0000_light_golden_guardian.sql  0001_nervous_shinko_yamashiro.sql
apps/web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
apps/web/lib/: deals.ts  env.ts  go-links.ts  posts.ts  routes-meta.ts
apps/web/lib/db/: index.ts  schema.ts
project-docs/: current_state.md  decisions.md  foundation.md  wl-search-snippet.md
project-docs/mockups/: v1-search-verdict.html  v2-fun-travel.html  v3-cinematic.html
worker/: alert.py  dates.py  db.py  logging_setup.py  models.py  poll.py  pyproject.toml  score.py  seed_routes.py  settings.py
worker/providers/: __init__.py  base.py  travelpayouts.py
worker/tests/: test_providers.py  test_scaffold.py
(+4 files in other folders)
